--- a/miniprogram/pages/pen/draw.wxml
+++ b/miniprogram/pages/pen/draw.wxml
@@ -3,7 +3,7 @@
 </cu-custom>
 
 <view class="canvas_area">
-  <image class="bgImage" src="{{todoListImage}}" style="height: {{canvasHeight}}px;"/>
+  <image class="bgImage" src="{{todoListImage}}" binderror="reloadImage" style="height: {{canvasHeight}}px;"/>
   <canvas canvas-id="myCanvas" class="myCanvas" disable-scroll="true" bindtouchstart="touchStart" bindtouchmove="touchMove" style="height: {{canvasHeight}}px;" />
 </view>
 
@@ -31,8 +31,12 @@
 
 <cover-view class='panel bg-gray' style='bottom: {{tabbarHeight}}px' wx:if="{{penSetting}}">
   <cover-view class="panel-box">
-    <cover-view bindtap="selectColor" class="color-spot bg-green" data-color="#39b54a" />
+    <cover-view bindtap="selectColor" class="color-spot bg-pink" data-color="#e03997" />
     <cover-view bindtap="selectColor" class="color-spot bg-orange" data-color="#f37b1d" />
+    <cover-view bindtap="selectColor" class="color-spot bg-olive" data-color="#8dc63f" />
+    <cover-view bindtap="selectColor" class="color-spot bg-cyan" data-color="#1cbbb4" />
+    
+    <cover-view bindtap="selectColor" class="color-spot bg-purple" data-color="#6739b6" />
   </cover-view>
   <cover-view class="panel-box">
     <cover-view class='bg-white btn-width' data-diff='2' bindtap='reduceWidth'>
