--- a/miniprogram/pages/pen/history.wxss
+++ b/miniprogram/pages/pen/history.wxss
@@ -1,12 +1,17 @@
-.grid-image {
+.image-bg {
   background-color:yellow;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+}
+
+.image-bg image {
+  width: 100%;
+	height: 100%;
+	position: absolute;
 }
 
 .time {
-  background-color: red;
+  margin-top: -15rpx;
+  top: 0;
+  left: 30rpx;
 }
 
 .modal-image {
