--- a/miniprogram/pages/index/setting.wxml
+++ b/miniprogram/pages/index/setting.wxml
@@ -18,6 +18,12 @@
         <text class="text-grey">意见反馈</text>
       </button>
     </view>
+    <view class="cu-item arrow" bindtap="authSetting">
+      <view class="content">
+        <text class="cuIcon-settings text-pink"></text>
+        <text class="text-grey">授权设置</text>
+      </view>
+    </view>
   </view>
 
   <view class='margin-left-xl padding-top-xl text-sm text-gray text-shadow'>MINIAPPS</view>
