--- a/miniprogram/pages/pen/photo.wxml
+++ b/miniprogram/pages/pen/photo.wxml
@@ -3,17 +3,19 @@
   <view slot="content">拍取纸上待办</view>
 </cu-custom>
 
-<view id='canvasArea' class="canvas_area margin-top-xl">
-  <canvas canvas-id="backCanvas" class="myCanvas" style='height: {{canvasHeight}}px'  disable-scroll hidden />
-  <canvas canvas-id="foreCanvas" class="myCanvas" style='height: {{canvasHeight}}px' disable-scroll />
+<view id='canvasArea' class="canvas_area margin-top-xl" style='height: {{canvasHeight}}px'>
+  <canvas canvas-id="backCanvas" class="myCanvas" disable-scroll hidden />
+  <canvas canvas-id="foreCanvas" class="myCanvas" disable-scroll wx:if="{{hasChoosedImg}}" />
+  <camera binderror="cameraError" class="myCanvas" wx:if="{{isCameraAuth&&!hasChoosedImg}}"></camera>
 </view>
 
-<view class='footer'>
-  <view class='bottom cu-bar tabbar'>
-    <button class='cu-btn lg round bg-red' bindtap='dismiss'>放弃</button>
-    <button class='cu-btn lg round bg-white' bindtap='chooseImg'>重拍</button>
-    <button class='cu-btn lg round bg-blue' bindtap='done' disabled='{{!hasChoosedImg}}'>选定</button>
-  </view>
-  <slider min='10' max='90' value='50' bindchange='updateImage'></slider>
+
+<slider min='10' max='90' value='50' hidden='{{!hasChoosedImg}}' bindchange='updateImage' style='bottom: {{tabbarHeight}}px'></slider>
+<view id="tabbar" class='cu-bar tabbar bottom'>
+  <button class='cu-btn lg round bg-red' bindtap='dismiss'>放弃</button>
+  <button class='cu-btn lg round bg-white' bindtap='reTake' wx:if="{{hasChoosedImg}}">重拍</button>
+  <button class='cu-btn lg round bg-green' bindtap='tokePhoto' wx:else>拍照</button>
+  <button class='cu-btn lg round bg-blue' bindtap='done' disabled='{{!hasChoosedImg}}'>选定</button>
 </view>
+
 
