--- a/miniprogram/pages/pen/photo.wxss
+++ b/miniprogram/pages/pen/photo.wxss
@@ -2,27 +2,35 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  background-color: greenyellow;
 }
 
 .myCanvas{
   top: 0;
   left: 0;
   width: 100%;
-  height: 80%;
+  height: 100%;
+  background-color: rosybrown;
   position: absolute;
 }
 
 slider {
+  position: fixed;
+  bottom: 42rpx;
   width: 80%;
   padding: 20rpx;
 }
 
 .bottom {
-  width: 100%;
+  position: fixed;
+	width: 100%;
+	bottom: 0;
+	z-index: 1024;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-around;
+  padding-bottom: calc(5rpx + env(safe-area-inset-bottom))
 }
 
 .footer {
