--- a/miniprogram/pages/pen/photo.wxss
+++ b/miniprogram/pages/pen/photo.wxss
@@ -2,15 +2,13 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: greenyellow;
 }
 
 .myCanvas{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rosybrown;
+  height: 80%;
   position: absolute;
 }
 
@@ -30,7 +28,7 @@ slider {
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-around;
-  padding-bottom: calc(5rpx + env(safe-area-inset-bottom))
+  padding-bottom: calc(env(safe-area-inset-bottom))
 }
 
 .footer {
