--- a/miniprogram/pages/pen/history.wxss
+++ b/miniprogram/pages/pen/history.wxss
@@ -15,8 +15,15 @@
 }
 
 .modal-image {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  height: 400px;
+  height: 350px;
+  display: block;
+}
+
+.modal-image image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 100rpx;
 }
