--- a/miniprogram/pages/pen/share.wxss
+++ b/miniprogram/pages/pen/share.wxss
@@ -2,19 +2,10 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  margin-top: 170rpx;
 }
 
 .myCanvas{
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80%;
-  position: absolute;
-}
-
-.bgImage{
-  top: 0;
+  top: 180rpx;
   left: 0;
   width: 100%;
   height: 80%;
