--- a/miniprogram/pages/pen/share.wxss
+++ b/miniprogram/pages/pen/share.wxss
@@ -5,7 +5,7 @@
 }
 
 .myCanvas{
-  top: 180rpx;
+  top: 20rpx;
   left: 0;
   width: 100%;
   height: 80%;
@@ -14,7 +14,7 @@
 
 .bottom {
   bottom: 0;
-  height: 30%;
+  height: 250rpx;
   width: 100%;
   position: absolute;
   align-items: center;
