--- a/miniprogram/pages/pen/photo.wxml
+++ b/miniprogram/pages/pen/photo.wxml
@@ -9,8 +9,10 @@
   <camera binderror="cameraError" class="myCanvas" style='height: {{canvasHeight}}px' wx:if="{{isCameraAuth&&!hasChoosedImg}}"></camera>
 </view>
 
-
-<slider min='10' max='90' value='50' hidden='{{!hasChoosedImg}}' bindchange='updateImage' style='bottom: {{tabbarHeight}}px'></slider>
+<view id="toolbar" class="cu-bar toolbar" hidden='{{!hasChoosedImg}}' style='bottom: {{tabbarHeight}}px'>
+  <switch bindchange="toggleFilter" checked="{{!useOriginal}}"></switch>
+  <slider min='10' max='90' value='50' bindchange='updateImage' hidden='{{useOriginal}}'></slider>
+</view>
 <view id="tabbar" class='cu-bar tabbar bottom'>
   <button class='cu-btn lg round bg-red' bindtap='dismiss'>放弃</button>
   <button class='cu-btn lg round bg-white' bindtap='reTake' wx:if="{{hasChoosedImg}}">重拍</button>
